--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,34 @@
 
 #highlighter {
     background-color: yellow;
+} 
+
+ul {
+    list-style-type: disc;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+} 
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 10px 300px 10px 10px; 
+    text-align: left;
+}
+
+thead {
+    background-color: rgb(0, 195, 255);
+    color: white;
+}
+
+tbody {
+    background-color: skyblue;
+}
+
+#white-row {
+    background-color: white;
 }
